--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,13 @@
 <% provide(:title, 'All users') %>
-<h1>All users </h1>
+<h1>All users</h1>
 
-<%= will_paginate @users, renderer: BootstrapPagination::Rails %>
+<%= will_paginate @collection, renderer: BootstrapPagination::Rails %>
 
 <ul class="users">
-	<%= render user %>
-</ul> 
+	<% @users.each do |user| %>
+		<%= render user %>
+	<% end %>
+</ul>
 
-<%= will_paginate @users, renderer: BootstrapPagination::Rails %>
+
+<%= will_paginate @collection, renderer: BootstrapPagination::Rails %>
