--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,9 +2,8 @@
 <h1>Update your profile</h1>
 
 <div class="row">
-  <div class="span6 offset3">
+  <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages' %>
       <%= render 'fields', f: f %>
 
       <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
