--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,17 @@
 		</h1>
 		</section>
 	</aside>
+
+	<div class="col-xs-8 col-md-6">
+		<% if @user.microposts.any? %>
+			<h3>Microposts (<%= @user.microposts.count %>)</h3>
+			<ol class="microposts">
+				<%= render @microposts %>
+			</ol>
+			<%= will_paginate @microposts, renderer: BootstrapPagination::Rails %>
+		<% end %>
+	</div>
+
 </div>
 
 
