--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,6 +1,9 @@
-<li>
-  <span class="content"><%= micropost.content %></span>
+	<li>
+  <span class="content"><%= wrap(micropost.content) %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
   </span>
+	<% if current_user?(micropost.user) %>
+  		<%= render 'shared/delete', object: micropost %>
+  	<% end %>
 </li>
